# ticks

./: CMakeLists.txt  LICENSE  README.md
src/: engine.cpp  engine.hpp  main.cpp  rules.cpp  rules.hpp  types.cpp  types.hpp
src/protocols/: command_line.cpp  command_line.hpp
